--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.7.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "aws-amplify": "^6.5.3",
-    "nuxt": "^3.13.0",
+    "@types/aws-lambda": "^8.10.145",
+    "aws-amplify": "^6.6.0",
+    "aws-lambda": "^1.0.7",
+    "nuxt": "^3.13.1",
     "vue": "latest"
   },
   "packageManager": "pnpm@8.12.1+sha1.aa961ffce9b6eaa56307d9b5ff7e984f25b7eb58",
   "devDependencies": {
-    "@aws-amplify/backend": "^1.2.0",
+    "@aws-amplify/backend": "^1.2.1",
     "@aws-amplify/backend-cli": "^1.2.5",
     "@sidebase/nuxt-session": "^0.2.8",
-    "aws-cdk": "^2",
-    "aws-cdk-lib": "^2",
-    "constructs": "^10.0.0",
+    "aws-cdk": "^2.157.0",
+    "aws-cdk-lib": "^2.157.0",
+    "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
     "tsx": "^4.19.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.2"
   }
 }
